# agents

1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  lab1practice.ipynb
1_foundations/community_contributions/: 1_lab1_Hy.ipynb  1_lab1_groq.ipynb  2_lab2-judge-prompt-changed.ipynb  2_lab2_akash_parallelization.ipynb  2_lab2_doclee99_gpt5_improves_gemini.25flash.ipynb  2_lab2_multi-evaluation-criteria.ipybnb  2_lab2_perplexity_support.ipynb  OptimaChatV1WritetoFile.ipynb  OptimaChatV3AccessDBOption.ipynb  Real_Time_Event_Dates_in_Interactive_CVs.ipynb  day1-business-agent.ipynb  elchanio_day1lab1.ipynb
1_foundations/community_contributions/2_lab4_deep_research_Pranav/: deep_research.py  (+1 more)
1_foundations/community_contributions/lab_2_orchestrator_workers_demo/: README_orchestrator_workers.md  orchestrator_workers_demo.py  pyproject.toml
1_foundations/me/: summary.txt
2_openai/: 2_lab2.ipynb
2_openai/community_contributions/: 2_lab2_Google_ADK.ipynb  2_lab2_product_recommendation.ipynb  2_lab2_resend_integration.ipynb  2_lab2_with_spam_clean_up.ipynb  2_lab2_with_spam_clean_up3.ipynb  3_lab3_with_pushover_notifications.ipynb  4_lab4_with_pushover_notifications.ipynb
3_crew/community_contributions/schema_builder/: README.md  pyproject.toml
3_crew/community_contributions/schema_builder/output/: schema_doc.md
3_crew/community_contributions/schema_builder/src/schema_builder/: crew.py  main.py
3_crew/community_contributions/schema_builder/src/schema_builder/config/: agents.yaml  tasks.yaml
4_langgraph/: 3_lab3.ipynb
6_mcp/: 1_lab1.ipynb  3_lab3.ipynb
(+109 files in other folders)
